# rs-template

./: .gitignore  LICENSE  README.md  Taskfile.yml
mono-repo/rs/{{cookiecutter.repo_name}}/: .env.local  Cargo.toml  README-CN.md  README.md  Taskfile.yml
mono-repo/rs/{{cookiecutter.repo_name}}/{{cookiecutter.workspace_name}}/cli/: Cargo.toml
mono-repo/rs/{{cookiecutter.repo_name}}/{{cookiecutter.workspace_name}}/core/: Cargo.toml  README.md
mono-repo/rs/{{cookiecutter.repo_name}}/{{cookiecutter.workspace_name}}/{{cookiecutter.app_name}}/: Cargo.toml  Taskfile.yml
