[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

################################################################################
# 自定义 bin script 名称 和 源码文件对应关系
################################################################################

[[bin]]
name = "rs-cli"
path = "src/bin/main.rs"



[dependencies]
